Headers felt too over-powering on mobile so I reduced their line-height below 800px. Also linked blog with rest of stuff in nav so all of that directs correctly now.

--- a/new-style.css
+++ b/new-style.css
@@ -366,6 +366,9 @@ h3, p {
 }
 
 @media screen and (max-width: 800px) {
+    .team-header, .feature-header, .blog-header {
+        line-height: 40px;
+    }
     .contributors {
         grid-template-columns: auto auto auto auto;
     }
